--- a/src/styles/utils/image-zoom.scss
+++ b/src/styles/utils/image-zoom.scss
@@ -2,6 +2,6 @@
   transition: transform $transition-duration;
 
   &:hover {
-    transform: scale(1.2);
+    transform: scale(1.05);
   }
 }
